# tooploox-agent-challenge

./: CLAUDE.md  README.md  job_description.md  task_description.txt
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  analyze-dependencies.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  discuss-phase.md  do.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract_learnings.md  fast.md  forensics.md  from-gsd2.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  insert-phase.md  intel.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  new-milestone.md  (+36 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
pipecat-quickstart/: .gitignore  README.md
pipecat-quickstart/server/: .env.example  bot.py  pyproject.toml
pipecat-quickstart/server/quiz/: __init__.py  app.py  config.py  generator.py  schemas.py  scoring.py  sources.py  storage.py
pipecat-quickstart/server/tests/: test_generator.py  test_schemas.py  test_scoring.py  test_sources.py  test_storage.py
(+35 files in other folders)
