[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.13.0",
    "langchain>=1.2.15",
    "pipecat-ai[cartesia,daily,deepgram,openai,runner,silero,webrtc]",
    "pipecatcloud",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
